--- a/src/components/posters/micCrunch/assets/micCrunch.css
+++ b/src/components/posters/micCrunch/assets/micCrunch.css
@@ -1,3 +1,129 @@
-.poster-content {
-  z-index: var(--layerTwo);
+@font-face {
+  font-family: "Permanent Marker";
+  font-weight: 400;
+  src: url(./fonts/ttf/PermanentMarker-Regular.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Roboto";
+  font-weight: 400;
+  src: url(./fonts/ttf/Roboto-Regular.ttf) format("truetype");
+}
+
+.top-crunch-container {
+  order: 1;
+  flex: 66%;
+  display: flex;
+  flex-direction: row;
+  align-content: flex-start;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 1rem;
+}
+
+.bottom-crunch-container {
+  order: 2;
+  flex: 34%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  align-items: center;
+}
+
+.crunch-page-name {
+  font-family: "Permanent Marker", cursive;
+  font-weight: 400;
+  font-size: 4rem;
+  padding-bottom: 1rem;
+  color: #3c8476;
+}
+
+.crunch-content {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-content: center;
+  text-transform: uppercase;
+  text-align: center;
+  color: #3c8476;
+}
+
+.crunch-background {
+  background-color: #3c8476;
+  position: relative;
+  top: 0;
+  overflow: none;
+}
+
+.crunch-poster-frame {
+  width: 100%;
+  height: 100%;
+}
+
+.crunch-poster-frame-bottom {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  animation: breath 2s linear infinite;
+}
+
+.crunch-poster-blob {
+  width: 100%;
+  position: absolute;
+  bottom: 11rem;
+  animation: breath 2.5s linear 2s infinite;
+}
+
+.crunch-poster-speckles {
+  width: 100%;
+  position: absolute;
+  top: 3rem;
+}
+
+.crunch-dog-container {
+  width: 100%;
+  position: absolute;
+  bottom: 9rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.crunch-dog-head {
+  position: absolute;
+  top: -7rem;
+  animation: chew 2s alternate infinite;
+}
+
+.crunch-dog-jaw {
+  position: absolute;
+  top: 4rem;
+  animation: chew 1s alternate 0.5s infinite;
+}
+
+@keyframes breath {
+  0% {
+    transform: scaleY(1);
+  }
+  50% {
+    transform: scaleY(0.8);
+  }
+  100% {
+    transform: scaleY(1);
+  }
+}
+
+@keyframes chew {
+  0% {
+    transform: translate(10px);
+  }
+  50% {
+    transform: translate(0px);
+  }
+  100% {
+    transform: translate(10px);
+  }
 }
